implement info page

--- a/TM.Wedding.UI/tm-wedding-ui/src/app/about/about.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/about/about.component.html
@@ -1,5 +1,6 @@
 <div class="container" [hidden]="!loading">
-    <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="#f5d15a" type="square-jelly-box" [fullScreen]="true" [showSpinner]="true">
+    <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="#f5d15a" type="square-jelly-box" [fullScreen]="true"
+        [showSpinner]="true">
         <h1 style="color: #f5d15a;font-family: 'Raleway', sans-serif;"> Loading... </h1>
     </ngx-spinner>
 </div>
@@ -14,6 +15,10 @@
         <div class="container header-container">
             <div>
                 <h1>Crete simply has it all!</h1>
+                <p style="color:#fce389">
+                    We invite you to join us for our wedding celebration in the beautiful location of our dreams, where
+                    you can combine our special day with a memorable vacation experience
+                </p>
                 <p>
                     Crete is the largest island in Greece, and the fifth largest one in the Mediterranean Sea. Here, you
                     can
