--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-carousel/home-carousel.component.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 </div>
-<div class="animation-container">
+<!-- <div class="animation-container">
     <div class="lightning-container">
       <div class="lightning white"></div>
       <div class="lightning red"></div>
@@ -37,4 +37,4 @@
       <div class="shape disc white"></div>
       <div class="shape triangle blue"></div>
     </div>
-  </div>
+  </div> -->
