--- a/TM.Wedding.UI/tm-wedding-ui/src/app/info-page/info-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/info-page/info-page.component.html
@@ -1,1 +1,219 @@
-<p>Info page works</p>
+<div class="carousel-container">
+    <div id="myVideo"></div>
+    <div class="overlay-div">
+        <div class="overlay-div-container">
+            <div class="container">
+                <h1 class="overlay-div-header">Crete Sense the authentic</h1>
+            </div>
+            <div class="container overlay-div-sub-header">
+                <h2>DISCOVER CRETE</h2>
+                <div class="overlay-div-day-header">
+                    <h1 class="overlay-div-sub-header-day">24aug</h1>
+                    <h1 class="overlay-div-sub-header-day"> 2024</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="card-container">
+    <div class="container header-container" style="text-align: center;">
+        <h1>Where to stay...</h1>
+    </div>
+    <div class="container" style="width:100%">
+        <div class="row animationContainer">
+            <div class="col-md-6 col-sm-12 col-lg-6 fade-in">
+                <div class="card">
+                    <img src="../../assets/img/bali-nostos-hotel.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h1 class="card-title">Nostos Beach Boutique Hotel</h1>
+                        <div class="container-hashtags">
+                            <a class="card-hashtag" style="background-color: #70ba8e;"
+                                href="https://www.google.com/maps/place/Nostos+Beach+Boutique+Hotel/@35.4072153,24.7818749,17z/data=!3m1!4b1!4m9!3m8!1s0x149ba9359c9ca439:0x5395b03db417a97c!5m2!4m1!1i2!8m2!3d35.407211!4d24.7844498!16s%2Fg%2F1td80w8t?entry=ttu"
+                                target="_blank">MAP</a>
+                            <a class="card-hashtag" style="background-color: #dd7299;"
+                                href="https://nostosbali.gr/en/albums" target="_blank">GALLERY</a>
+                        </div>
+                        <p class="card-text">Nostos Hotel, is a Boutique Beach Hotel located in Bali, a small seaside
+                            village with a bright and relaxing atmosphere! All Rooms and Suites at this newly renovated
+                            property, are dedicated to comfort and pleasure, as well as they come with full amenities
+                            and the option of a wide variety of exclusive services</p>
+                        <a href="https://nostosbali.gr/" target="_blank" class="btn btn-info"
+                            style="border-radius: 20px;">DISCOVER MORE</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12 col-lg-6 fade-in">
+                <div class="card">
+                    <img src="../../assets/img/bali-atali-hotel.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h1 class="card-title">Atali Grand Resort & Aqua Park</h1>
+                        <div class="container-hashtags">
+                            <a class="card-hashtag" style="background-color: #70ba8e;"
+                                href="https://www.google.com/maps/place/Atali+Grand+Resort/@35.4058936,24.7796371,17z/data=!3m1!4b1!4m9!3m8!1s0x149ba9914ce7a561:0x12c09557db6851fb!5m2!4m1!1i2!8m2!3d35.4058893!4d24.782212!16s%2Fg%2F1tk206_6?entry=ttu"
+                                target="_blank">MAP</a>
+                            <a class="card-hashtag" style="background-color: #c98066;"
+                                hreft="https://ataligrandresort.com/en/albums" target="_blank">GALLERY</a>
+                            <a class="card-hashtag" style="background-color:#43b3ba;"
+                                href="https://ataligrandresort.com/en/#category1681" target="_blank">WATERPARK</a>
+                        </div>
+                        <p class="card-text">Atali Grand Resort, a fully renovated 4 star Resort which is located in a
+                            beautiful small seaside village in Crete, named Bali. Let us welcome you for a relaxing
+                            weekend, your family vacation or your professional needs. Whatever your choices, our all
+                            inclusive resort will provides you a bright and a relaxing atmosphere in a location where
+                            you overlook both ocean and mountain view.</p>
+                        <a href="https://ataligrandresort.com/" target="_blank" class="btn btn-info"
+                            style="border-radius: 20px;">DISCOVER MORE</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12 col-lg-6 fade-in">
+                <div class="card">
+                    <img src="../../assets/img/rethimno-grecotel-hotel.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h1 class="card-title">Grecotel Beach House</h1>
+                        <div class="container-hashtags">
+                            <a class="card-hashtag" style="background-color: #c98066;"
+                                href="https://www.google.com/maps/place/Grecotel+Plaza+Beach+House/@35.3682504,24.5023124,17z/data=!3m1!4b1!4m9!3m8!1s0x149b75139acdd4fb:0xbd4699532575b2f5!5m2!4m1!1i2!8m2!3d35.3682461!4d24.5048873!16s%2Fg%2F1hm4fmjgv?entry=ttu"
+                                target="_blank">MAP</a>
+                            <a class="card-hashtag" style="background-color: #dd7299;"
+                                href="https://plazabeachhouse.grecotel.com/photo-gallery.html"
+                                target="_blank">GALLERY</a>
+                            <a class="card-hashtag" style="background-color:#43b3ba;"
+                                href="https://plazabeachhouse.grecotel.com/summer-activities.h"
+                                target="_blank">ACTIVITIES</a>
+                        </div>
+                        <p class="card-text">On the seafront right on the edge of Rethymno town. Authentic, yet
+                            international. Its little neighborhoods house lofts and apartments are perfect for breaks.
+                            The beach is soft sand, the sea Greek blue and kids splash about on paddleboards.</p>
+                        <a href="https://plazabeachhouse.grecotel.com/en/index.html" target="_blank"
+                            class="btn btn-info" style="border-radius: 20px;">DISCOVER MORE</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-12 col-lg-6 fade-in">
+                <div class="card">
+                    <img src="../../assets/img/rethimno-nautilux-hotel.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h1 class="card-title">Nautilux Rethymno</h1>
+                        <div class="container-hashtags">
+                            <a class="card-hashtag" style="background-color: #70ba8e;"
+                                href="https://www.nautiluxhotel.com/rethymno-luxury-hotel/" target="_blank">GALLERY</a>
+                            <a class="card-hashtag" style="background-color: #c98066;"
+                                href="https://www.google.com/maps/place/Nautilux+by+Mage+Hotels/@35.3675909,24.5043421,17z/data=!3m1!4b1!4m9!3m8!1s0x149b7540ad298653:0xeff431f9ac2960cf!5m2!4m1!1i2!8m2!3d35.3675866!4d24.506917!16s%2Fg%2F11pv9hcgnf?entry=ttu"
+                                target="_blank">MAP</a>
+                        </div>
+                        <p class="card-text">Located on the north coastline of Crete, with direct access to the sandy
+                            beach and close to the picturesque and charming city of Rethymnon, the Nautilux 5 star beach
+                            resort is the ideal getaway for travelers who are seeking a combination of luxury beach
+                            relaxation and city exploration in a stylish, elegant and modern ambience. </p>
+                        <a href="https://www.nautiluxhotel.com/?gad=1&gclid=CjwKCAjwseSoBhBXEiwA9iZtxkkYqRZNYkTF7zRSyU47rteXk3dQAuqxfssLwhde6KV8XJydgMiggBoC5y8QAvD_BwE"
+                            target="_blank" class="btn btn-md btn-info" style="border-radius: 20px;">DISCOVER MORE</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="parent-container" style="text-align: center;">
+    <i class="bi bi-airplane-engines" style="font-size:2.8rem"></i><br>
+    <h1 style="font-family: 'Raleway', sans-serif;">Athens (ATH) to Heraklion (HER) flights</h1>
+    <div class="fade-in travel-container">
+        <div class="container" style="text-align: center;">
+            <div class="row" style="color:grey;font-family: 'Raleway', sans-serif;">
+                <div class="col">
+                    <i class="bi bi-calendar-day-fill"></i><br>
+                    <span>78</span><br>
+                    <span>Weekly Planes</span>
+                </div>
+                <div class="col">
+                    <i class="bi bi-stopwatch-fill"></i><br>
+                    <span>52min</span><br>
+                    <span>Average Duration</span>
+                </div>
+                <div class="col">
+                    <i class="bi bi-ticket-perforated-fill"></i><br>
+                    <span>€38</span><br>
+                    <span>Cheapest Price</span>
+                </div>
+            </div>
+            <div class="row" style="justify-content: center;">
+                <a class="btn btn-warning" href="https://www.rome2rio.com/map/Greece/Crete-Greece?r2r_campaign=TQ_TP_Transport&source=adwords&gclid=CjwKCAjwseSoBhBXEiwA9iZtxrIrGvpKARAvyC6Pkxds-LXY1llp3WME2PqqaizDOMFe-XuYZs8-2BoCt8MQAvD_BwE" target="_blank">See schedules</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="parent-container" style="text-align: center;">
+    <i class="bi bi-tsunami" style="font-size:2.8rem"></i><br>
+    <h1 style="font-family: 'Raleway', sans-serif;">Piraeus to Crete ferrys</h1>
+    <div class="fade-in travel-container">
+        <div class="container" style="text-align: center;">
+            <div class="row" style="color:grey;font-family: 'Raleway', sans-serif;">
+                <div class="col">
+                    <i class="bi bi-calendar-day-fill"></i><br>
+                    <span>24</span><br>
+                    <span>Weekly Ferrys</span>
+                </div>
+                <div class="col">
+                    <i class="bi bi-stopwatch-fill"></i><br>
+                    <span>8hours</span><br>
+                    <span>Average Duration</span>
+                </div>
+                <div class="col">
+                    <i class="bi bi-ticket-perforated-fill"></i><br>
+                    <span>€40</span><br>
+                    <span>Cheapest Price</span>
+                </div>
+            </div>
+            <div class="row" style="justify-content: center;">
+                <a class="btn btn-warning" href="https://www.ferryhopper.com/el/" target="_blank">See schedules</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="card-container">
+    <div style="text-align: center;">
+        <i class="bi bi-shop"  style="font-size:2.8rem"></i><br>
+        <h1>What to try</h1>
+    </div>
+    <div class="scroll-container">
+        <div class="scroll-content">
+            <div class="fade-in scroll-content-header" style="background-image: url(../../assets/img/7-thalasses-seafood-restaurant.jpg);">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6" style="background-color: rgb(255, 255, 255,0.5);padding:10px">
+                        <h1 style="color:black;">7 Thalasses <span
+                                style="color:rgb(74, 74, 74);font-family: 'Raleway', sans-serif;"> | Seafood</span></h1>
+                        <a class="btn btn-dark btn-lg" style="font-family: 'Raleway', sans-serif;"
+                            href="https://www.7thalasses.eu/" target="_blank">EXPLORE</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="scroll-content">
+            <div class="fade-in scroll-content-header" style="background-image: url(../../assets/img/nostos-restaurant.JPG);">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6" style="background-color: rgb(255, 255, 255,0.5);padding:10px">
+                        <h1 style="color:rgb(0, 0, 0);">Nostos <span
+                                style="color:rgb(92, 92, 92);font-family: 'Raleway', sans-serif;"> | in Rethymno</span></h1>
+                        <a class="btn btn-dark btn-lg" style="font-family: 'Raleway', sans-serif;"
+                            href="https://www.tripadvisor.com.gr/Restaurant_Review-g189421-d17474533-Reviews-Nostos-Rethymnon_Rethymnon_Prefecture_Crete.html" target="_blank">EXPLORE</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="scroll-content">
+            <div class="fade-in scroll-content-header" style="background-image: url(../../assets/img/avli-rethimno.JPG);">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6" style="background-color: rgb(255, 255, 255,0.5);padding:10px">
+                        <h1 style="color:black;">Avli <span
+                                style="color:rgb(74, 74, 74);font-family: 'Raleway', sans-serif;"> | in Rethymno</span></h1>
+                        <a class="btn btn-dark btn-lg" style="font-family: 'Raleway', sans-serif;"
+                            href="https://www.tripadvisor.com/Restaurant_Review-g189421-d1102986-Reviews-Avli-Rethymnon_Rethymnon_Prefecture_Crete.html" target="_blank">EXPLORE</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
