--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container fade-in">
     <div style="text-align: center; color: white; font-size:4rem">
         <i class="bi bi-geo"></i>
     </div>
-    <div class="row fade-in">
+    <div class="row">
         <div class="col" style="font-family: 'Raleway', sans-serif;">
             <a href="/wedding" style="text-decoration:none"><h2 style="font-family: 'Raleway', sans-serif;color:#d9a74a">CEREMONY</h2></a>
             <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="color:rgb(250, 250, 250);text-decoration:none"><strong>Skepasti Arena</strong></a><br>
@@ -17,5 +17,8 @@
             <span>Panormos | Crete</span><br>
             <span>ΕΟ Rethimnou Irakliou, Skepasti 74052</span>
         </div>
+    </div>
+    <div class="row" style="text-align: center; justify-content: center;margin-top:1rem">
+        <a class="btn btn-warning" href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="width:50%">Click to see on Map</a>
     </div>
 </div>
