--- a/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.css
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.css
@@ -19,6 +19,7 @@ background-color: rgba(255, 255, 255, 0.4);
 
 .overlay-div-sub-header{
     margin-top:2rem;
+    font-family: 'Raleway', sans-serif;
 }
 
 .overlay-div-sub-header-day{
@@ -31,4 +32,31 @@ background-color: rgba(255, 255, 255, 0.4);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+input{
+    font-family: 'Raleway', sans-serif;
+}
+
+label{
+    font-family: 'Raleway', sans-serif;
+}
+
+.qa-container{
+    padding:20px 10px;
+    background-color:#f5d15a; 
+    text-align: center;
+    border:1px solid rgb(223, 144, 41);
+    border-radius: 8px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.sub-qa-container{
+    padding:20px 10px;
+    background-color:#393939;
+    color:#f5d15a;
+    text-align: center;
+    border:4px solid #f5d15a;
+    border-radius: 8px;
+    font-family: 'Raleway', sans-serif;   
 }
