--- a/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/rsvp-page/rsvp-page.component.html
@@ -21,6 +21,20 @@
         <form [formGroup]="rsvpForm" (ngSubmit)="onSubmit()" style="text-align:left;">
             <div [ngStyle]="{'opacity':isLoading ? '0.5' : '1' }" style="background-color: rgba(255, 255, 255, 0.2)">
                 <div style="margin-bottom:20px">
+                    <div class="qa-container">
+                        <label>
+                            <input type="radio" formControlName="generalAttend" value="Yes" name="generalAttend" (change)="onRadioChange()">
+                            <strong style="color:#1c6b1c"> I will</strong> attend ceremony and/or party  <i class="bi bi-check-circle" style="font-size:1.4rem;padding-left:8px;color:#1c6b1c"></i>.
+                          </label>
+                    </div>
+                    <div class="qa-container" style="margin-top:8px;">
+                        <label>
+                            <input type="radio" formControlName="generalAttend" value="No" name="generalAttend" (change)="onRadioChange()">
+                            <strong style="color:#8f1616"> I will not</strong> attend both of them <i class="bi bi-slash-circle" style="font-size:1.4rem;padding-left:8px;color:#8f1616"></i>.
+                          </label>                       
+                    </div>
+                </div>
+                <div class="sub-qa-container" style="margin-bottom:20px" [hidden]="noAttendance">
                     <div class="form-check">
                         <label class="form-check-label" for="attendCeremony">Will you attend the wedding ceremony?</label>
                         <input class="form-check-input" type="checkbox" id="attendCeremony" formControlName="attendCeremony" (change)="onCheckboxChange()">  
@@ -30,8 +44,8 @@
                         <input class="form-check-input" type="checkbox" id="attendParty" formControlName="attendParty" (change)="onCheckboxChange()">  
                     </div>
                 </div>
-                <div [hidden]="!submitterWillAttend">
-                    <h4>Contact Details <i class="bi bi-person-bounding-box" style="padding-left:4px"></i></h4>
+                <div [hidden]="!submitterWillAttend && !noAttendance || noAnswer">
+                    <h4 style="font-family: 'Raleway', sans-serif;">Contact Details <i class="bi bi-person-bounding-box" style="padding-left:4px"></i></h4>
                     <div style="margin-bottom:20px">
                         <input id="submitterName" name="submitterName" formControlName="submitterName"
                             placeholder="Enter your first name" class="form-control" (change)="onSubmitterChange()">
@@ -49,7 +63,7 @@
                             placeholder="Enter your email address" class="form-control" type="email">
                     </div>
                 </div>
-                <div [hidden]="!submitterWillAttend">
+                <div [hidden]="!submitterWillAttend || noAttendance">
                     <h4>Reservation Details <i class="bi bi-ui-radios" style="padding-left:4px"></i></h4>
                     <label for="peopleCount">Number of people</label>
                     <div style="margin-bottom:20px">
@@ -68,6 +82,8 @@
                             </tr>
                         </table>
                     </div>
+                </div>
+                <div [hidden]="!submitterWillAttend && !noAttendance || noAnswer">
                     <div style="margin-bottom:20px">
                         <textarea id="comments" name="comments" formControlName="comments"
                             placeholder="Enter any additional comments" class="form-control" rows="4"></textarea>
@@ -77,7 +93,7 @@
     
             <div class="form-inline" style="padding:20px 0px;text-align: center;">
                 <button class="btn btn-lg btn-success" type="submit" style="margin-right:5px;width:100%;max-width:800px"
-                    [disabled]="isLoading || !rsvpForm.valid || !submitterWillAttend"><i class="bi bi-envelope-open-heart" style="padding-right:8px"></i>Submit RSVP</button>
+                    [disabled]="isLoading || !rsvpForm.valid"><i class="bi bi-envelope-open-heart" style="padding-right:8px"></i>Submit RSVP</button>
             </div>
     
             <div class="form-inline" style="padding:40px 0px;" [hidden]="!isLoading">
