implement language service and selector

--- a/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/couple-info/couple-info.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="background-color: #383838;">
     <div class="coupleInfo-mainHeader">
-        <h3 style=" font-family: 'Raleway', sans-serif;">JOIN THODORIS & MARILENA TO CELEBRATE THEIR UNION</h3>
-        <span >A little about the Bride and Groom</span>
+        <h3 style=" font-family: 'Raleway', sans-serif;">{{languageConfig.properties.get('home_cpl_header')}}</h3>
+        <span>{{languageConfig.properties.get('home_cpl_subheader')}}</span>
         <p style="font-size:2rem;color:gray">
           <i class="bi bi-rainbow"></i>
         </p>
@@ -12,7 +12,7 @@
                 <img src="../../assets/img/couple-info-groom.jpg" class="card-img-top" alt="..." >
                 <div class="card-body">
                   <h5 class="card-title" style="font-family:WeddingCaligraphic">Thodoris</h5>
-                  <p class="card-text">You have been my best friend, mentor, playmate, confidant, and my greatest challenge. But most importantly, you are the love of my life and you make me happier than I could ever imagine and more loved than I ever thought possible.</p>
+                  <p class="card-text">{{languageConfig.properties.get('home_cpl_groom')}}</p>
                 </div>
               </div>
         </div>
@@ -21,7 +21,7 @@
                 <img src="../../assets/img/couple-info-bride.jpg" class="card-img-top" alt="..." >
                 <div class="card-body">
                   <h5 class="card-title" style="font-family:WeddingCaligraphic">Marilena</h5>
-                  <p class="card-text">I love you for your beauty, your intelligence, your kindness… and for the way you always know how to make me feel so special. So on top of all the other vows that I will make to you on our wedding day, I also vow to always appreciate how lucky I am.</p>
+                  <p class="card-text">{{languageConfig.properties.get('home_cpl_pride')}}</p>
                 </div>
               </div>
         </div>
