--- a/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
@@ -1,3 +1,9 @@
+<div class="container">
+  <ngx-spinner bdColor="rgba(0, 0, 0, 1)" size="medium" color="#f5d15a" type="square-jelly-box" [fullScreen]="true"
+    [showSpinner]="true">
+    <h1 style="color: #f5d15a;font-family: 'Raleway', sans-serif;"> Loading... </h1>
+  </ngx-spinner>
+</div>
 <div class="d-flex">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
@@ -7,34 +13,65 @@
           T&M
         </button> -->
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" routerLink="" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Home</a>
+            <a class="nav-link" routerLink="" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_home')}}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/wedding" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">The Wedding</a>
+            <a class="nav-link" routerLink="/wedding" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_wedding')}}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/about" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">About Crete</a>
+            <a class="nav-link" routerLink="/about" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_about')}}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/info" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Info</a>
+            <a class="nav-link" routerLink="/info" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_info')}}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/rsvp" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">RSVP</a>
+            <a class="nav-link" routerLink="/rsvp" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_rsvp')}}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/gifts" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Gift List</a>
+            <a class="nav-link" routerLink="/gifts" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_gift')}}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/contact" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show">Contact</a>
+            <a class="nav-link" routerLink="/contact" data-bs-toggle="collapse"
+              data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_contact')}}</a>
           </li>
+          <!-- <li style="color:white">
+            <div [hidden]="languageSelectedCode==='en'"><button class="btn" style="padding:0px"
+                (click)="changeLanguage('en')"><img src="../../assets/img/english-flag.png"
+                  style="width:28px;height:28px;"></button></div>
+            <div [hidden]="languageSelectedCode==='el'"><button class="btn" style="padding:0px"
+                (click)="changeLanguage('el')"><img src="../../assets/img/greek-icon.png"
+                  style="width:28px;height:28px;"></button></div>
+          </li> -->
         </ul>
       </div>
     </div>
   </nav>
+  <div class="languageContainer">
+    <div>
+      <div [hidden]="languageSelectedCode==='en'">
+        <button class="btn" (click)="changeLanguage('en')" style="color:White;text-decoration: underline;">
+          <!-- <img src="../../assets/img/english-flag.png"
+          style="width:32px;height:32px;"> -->
+          EN
+        </button></div>
+    <div [hidden]="languageSelectedCode==='el'">
+      <button class="btn" (click)="changeLanguage('el')"  style="color:White;text-decoration: underline;">
+        <!-- <img src="../../assets/img/greek-icon.png"
+          style="width:32px;height:32px;"> -->
+          EΛ
+        </button></div>
+    </div>
+  </div>
 </div>
