--- a/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/home-details/home-details.component.html
@@ -4,21 +4,21 @@
     </div>
     <div class="row">
         <div class="col" style="font-family: 'Raleway', sans-serif;">
-            <a href="/wedding" style="text-decoration:none"><h2 style="font-family: 'Raleway', sans-serif;color:#d9a74a">CEREMONY</h2></a>
-            <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="color:rgb(250, 250, 250);text-decoration:none"><strong>Skepasti Arena</strong></a><br>
+            <a href="/wedding" style="text-decoration:none"><h2 style="font-family: 'Raleway', sans-serif;color:#d9a74a">{{languageConfig.properties.get('home_info_header_cer')}}</h2></a>
+            <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="color:rgb(250, 250, 250);text-decoration:none"><strong>{{languageConfig.properties.get('home_info_subheader_cer')}}</strong></a><br>
             <span><i class="bi bi-calendar2-month-fill" style="padding-right:4px"></i>19:30 - 20:30</span><br>
-            <span>Panormos | Crete</span><br>
-            <span>ΕΟ Rethimnou Irakliou, Skepasti 74052</span>
+            <span>{{languageConfig.properties.get('home_info_loc1_cer')}}</span><br>
+            <span>{{languageConfig.properties.get('home_info_loc2_cer')}}</span>
         </div>
         <div class="col" style="font-family: 'Raleway', sans-serif;">
-            <a href="/wedding" style="text-decoration:none"><h2 style="font-family: 'Raleway', sans-serif;color:#d9a74a;">PARTY</h2></a>
-            <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="color:rgb(255, 255, 255);text-decoration:none"><strong>Skepasti Arena</strong></a><br>
+            <a href="/wedding" style="text-decoration:none"><h2 style="font-family: 'Raleway', sans-serif;color:#d9a74a;">{{languageConfig.properties.get('home_info_header_par')}}</h2></a>
+            <a href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="color:rgb(255, 255, 255);text-decoration:none"><strong>{{languageConfig.properties.get('home_info_subheader_par')}}</strong></a><br>
             <span><i class="bi bi-calendar2-month-fill" style="padding-right:4px"></i>20:30 - Late</span><br>
-            <span>Panormos | Crete</span><br>
-            <span>ΕΟ Rethimnou Irakliou, Skepasti 74052</span>
+            <span>{{languageConfig.properties.get('home_info_loc1_par')}}</span><br>
+            <span>{{languageConfig.properties.get('home_info_loc2_par')}}</span>
         </div>
     </div>
     <div class="row" style="text-align: center; justify-content: center;margin-top:1rem">
-        <a class="btn btn-warning" href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="width:50%">Click to see on Map</a>
+        <a class="btn btn-warning" href="https://maps.app.goo.gl/P8xvvCH76dtMMmxj8" target="_blank" style="width:50%">{{languageConfig.properties.get('home_info_btn_map')}}</a>
     </div>
 </div>
