changes on login and info pages

--- a/TM.Wedding.UI/tm-wedding-ui/src/app/about/about.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/about/about.component.html
@@ -16,8 +16,7 @@
             <div>
                 <h1>Crete simply has it all!</h1>
                 <p style="color:#fce389">
-                    We invite you to join us for our wedding celebration in the beautiful location of our dreams, where
-                    you can combine our special day with a memorable vacation experience
+                    We propose you to combine our special day with a memorable vacation experience.
                 </p>
                 <p>
                     Crete is the largest island in Greece, and the fifth largest one in the Mediterranean Sea. Here, you
@@ -112,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 col-lg-6 animated slide-in from-right">
+                <div class="col-md-6 col-sm-12 col-lg-6 animated slide-in from-left">
                     <div class="card">
                         <img src="../../assets/img/crete_rethymno.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -163,7 +162,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 col-lg-6 animated slide-in from-right">
+                <div class="col-md-6 col-sm-12 col-lg-6 animated slide-in from-left">
                     <div class="card">
                         <img src="../../assets/img/crete_agios_nikolaos.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
