--- a/TM.Wedding.UI/tm-wedding-ui/src/app/info-page/info-page.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/info-page/info-page.component.html
@@ -16,6 +16,103 @@
     </div>
 </div>
 
+<div class="parent-container" style="text-align: center;">
+
+    <div>
+        <i class="bi bi-airplane-engines" style="font-size:2.8rem"></i><br>
+        <h1 style="font-family: 'Raleway', sans-serif;">Athens (ATH) to Heraklion (HER) flights</h1>
+        <div class="fade-in travel-container">
+            <div class="container" style="text-align: center;">
+                <div class="row" style="color:grey;font-family: 'Raleway', sans-serif;">
+                    <div class="col">
+                        <i class="bi bi-calendar-day-fill"></i><br>
+                        <span>78</span><br>
+                        <span>Weekly Planes</span>
+                    </div>
+                    <div class="col">
+                        <i class="bi bi-stopwatch-fill"></i><br>
+                        <span>52min</span><br>
+                        <span>Average Duration</span>
+                    </div>
+                    <div class="col">
+                        <i class="bi bi-ticket-perforated-fill"></i><br>
+                        <span>€38</span><br>
+                        <span>Cheapest Price</span>
+                    </div>
+                </div>
+                <div class="row" style="justify-content: center;">
+                    <a class="btn btn-warning"
+                        href="https://www.rome2rio.com/map/Athens-Airport-ATH/Heraklion?r2r_campaign=TQ_TP_Transport&source=adwords&gclid=CjwKCAjwseSoBhBXEiwA9iZtxrIrGvpKARAvyC6Pkxds-LXY1llp3WME2PqqaizDOMFe-XuYZs8-2BoCt8MQAvD_BwE#r/Fly/s/0"
+                        target="_blank">See schedules</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <i class="bi bi-airplane-engines" style="font-size:2.8rem"></i><br>
+        <h1 style="font-family: 'Raleway', sans-serif;">Thessaloniki (SKG) to Heraklion (HER) flights</h1>
+        <div class="fade-in travel-container">
+            <div class="container" style="text-align: center;">
+                <div class="row" style="color:grey;font-family: 'Raleway', sans-serif;">
+                    <div class="col">
+                        <i class="bi bi-calendar-day-fill"></i><br>
+                        <span>62</span><br>
+                        <span>Weekly Planes</span>
+                    </div>
+                    <div class="col">
+                        <i class="bi bi-stopwatch-fill"></i><br>
+                        <span>4hours</span><br>
+                        <span>Average Duration</span>
+                    </div>
+                    <div class="col">
+                        <i class="bi bi-ticket-perforated-fill"></i><br>
+                        <span>€105</span><br>
+                        <span>Cheapest Price</span>
+                    </div>
+                </div>
+                <div class="row" style="justify-content: center;">
+                    <a class="btn btn-warning"
+                        href="https://www.rome2rio.com/map/Greece/Crete-Greece?r2r_campaign=TQ_TP_Transport&source=adwords&gclid=CjwKCAjwseSoBhBXEiwA9iZtxrIrGvpKARAvyC6Pkxds-LXY1llp3WME2PqqaizDOMFe-XuYZs8-2BoCt8MQAvD_BwE"
+                        target="_blank">See schedules</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+<div class="parent-container" style="text-align: center;">
+    <i class="bi bi-tsunami" style="font-size:2.8rem"></i><br>
+    <h1 style="font-family: 'Raleway', sans-serif;">Piraeus to Heraklion ferrys</h1>
+    <div class="fade-in travel-container">
+        <div class="container" style="text-align: center;">
+            <div class="row" style="color:grey;font-family: 'Raleway', sans-serif;">
+                <div class="col">
+                    <i class="bi bi-calendar-day-fill"></i><br>
+                    <span>24</span><br>
+                    <span>Weekly Ferrys</span>
+                </div>
+                <div class="col">
+                    <i class="bi bi-stopwatch-fill"></i><br>
+                    <span>8hours</span><br>
+                    <span>Average Duration</span>
+                </div>
+                <div class="col">
+                    <i class="bi bi-ticket-perforated-fill"></i><br>
+                    <span>€40</span><br>
+                    <span>Cheapest Price</span>
+                </div>
+            </div>
+            <div class="row" style="justify-content: center;">
+                <a class="btn btn-warning" href="https://www.ferryhopper.com/el/" target="_blank">See schedules</a>
+            </div>
+        </div>
+    </div>
+    <p>
+        You can also travel with a ferry from Athens, Thessaloniki or Pireus to Chania,
+        but we recommend Heraklionw as it is closer to the wedding.
+    </p>
+</div>
+
 <div class="card-container">
     <div class="container header-container" style="text-align: center;">
         <h1>Where to stay...</h1>
@@ -26,24 +123,32 @@
                 <div class="card">
                     <img src="../../assets/img/bali-nostos-hotel.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h1 class="card-title">Nostos Beach Boutique Hotel</h1>
+                        <h1 class="card-title">Find the best place to enjoy your stay</h1>
                         <div class="container-hashtags">
                             <a class="card-hashtag" style="background-color: #70ba8e;"
-                                href="https://www.google.com/maps/place/Nostos+Beach+Boutique+Hotel/@35.4072153,24.7818749,17z/data=!3m1!4b1!4m9!3m8!1s0x149ba9359c9ca439:0x5395b03db417a97c!5m2!4m1!1i2!8m2!3d35.407211!4d24.7844498!16s%2Fg%2F1td80w8t?entry=ttu"
-                                target="_blank">MAP</a>
+                                href="https://www.booking.com/searchresults.el.html?ss=%CE%9A%CF%81%CE%AE%CF%84%CE%B7%2C+%CE%95%CE%BB%CE%BB%CE%AC%CE%B4%CE%B1&efdco=1&label=gen173nr-1BCAEoggI46AdIM1gEaFyIAQGYAQi4ARfIAQzYAQHoAQGIAgGoAgO4Ap7A7qgGwAIB0gIkMDNkZDY2MzYtMzJmYS00NWQzLTg0YmMtZGU1NGVjMzVlNDM52AIF4AIB&sid=cd81e473b2ab8ba7c863c556e4d9399e&aid=304142&lang=el&sb=1&src_elem=sb&src=index&dest_id=811&dest_type=region&ac_position=0&ac_click_type=b&ac_langcode=el&ac_suggestion_list_length=3&search_selected=true&search_pageview_id=efda234fc2e003d1&ac_meta=GhBlZmRhMjM0ZmMyZTAwM2QxIAAoATICZWw6BWtyaHRoQABKAFAA&group_adults=2&no_rooms=1&group_children=0&sb_travel_purpose=leisure"
+                                target="_blank">BOOKING</a>
                             <a class="card-hashtag" style="background-color: #dd7299;"
-                                href="https://nostosbali.gr/en/albums" target="_blank">GALLERY</a>
+                                href="https://www.airbnb.gr/s/%CE%9A%CF%81%CE%AE%CF%84%CE%B7--%CE%95%CE%BB%CE%BB%CE%AC%CE%B4%CE%B1/homes?tab_id=home_tab&refinement_paths%5B%5D=%2Fhomes&flexible_trip_lengths%5B%5D=one_week&monthly_start_date=2023-11-01&monthly_length=3&price_filter_input_type=0&price_filter_num_nights=5&channel=EXPLORE&query=%CE%9A%CF%81%CE%AE%CF%84%CE%B7%2C%20%CE%95%CE%BB%CE%BB%CE%AC%CE%B4%CE%B1&place_id=ChIJoZh9gi_-mhQRMMa54iy9AAE&date_picker_type=calendar&source=structured_search_input_header&search_type=autocomplete_click" target="_blank">AIRBNB</a>
+                            <a class="card-hashtag" style="background-color:#43b3ba;"
+                                href="https://www.thinkvilla.gr/"
+                                target="_blank">THINK VILLA</a>
                         </div>
-                        <p class="card-text">Nostos Hotel, is a Boutique Beach Hotel located in Bali, a small seaside
-                            village with a bright and relaxing atmosphere! All Rooms and Suites at this newly renovated
-                            property, are dedicated to comfort and pleasure, as well as they come with full amenities
-                            and the option of a wide variety of exclusive services</p>
-                        <a href="https://nostosbali.gr/" target="_blank" class="btn btn-info"
-                            style="border-radius: 20px;">DISCOVER MORE</a>
+                        <p class="card-text">Our recommendations, according to the distance from the wedding are:</p>
+                        <ul class="card-text">
+                            <li>Skepasti | 900m <i class="bi bi-car-front-fill"></i></li>
+                            <li>Perama | 7.8km <i class="bi bi-car-front-fill"></i></li>
+                            <li>Melidoni | 5.1km <i class="bi bi-car-front-fill"></i></li>
+                            <li>Roumeli | 3.7km <i class="bi bi-car-front-fill"></i></li>
+                            <li>Chouneri | 23km <i class="bi bi-car-front-fill"></i></li>
+                            <li>Aggeliana | 25km <i class="bi bi-car-front-fill"></i></li>
+                            <li>Rethimno | 24km <i class="bi bi-car-front-fill"></i></li>
+                        </ul>
+                        <a routerLink="/about" class="btn btn-info" style="border-radius: 20px;">DISCOVER MORE</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-sm-12 col-lg-6 fade-in">
+            <!-- <div class="col-md-6 col-sm-12 col-lg-6 fade-in">
                 <div class="card">
                     <img src="../../assets/img/bali-atali-hotel.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -111,76 +216,22 @@
                             target="_blank" class="btn btn-md btn-info" style="border-radius: 20px;">DISCOVER MORE</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
 
-<div class="parent-container" style="text-align: center;">
-    <i class="bi bi-airplane-engines" style="font-size:2.8rem"></i><br>
-    <h1 style="font-family: 'Raleway', sans-serif;">Athens (ATH) to Heraklion (HER) flights</h1>
-    <div class="fade-in travel-container">
-        <div class="container" style="text-align: center;">
-            <div class="row" style="color:grey;font-family: 'Raleway', sans-serif;">
-                <div class="col">
-                    <i class="bi bi-calendar-day-fill"></i><br>
-                    <span>78</span><br>
-                    <span>Weekly Planes</span>
-                </div>
-                <div class="col">
-                    <i class="bi bi-stopwatch-fill"></i><br>
-                    <span>52min</span><br>
-                    <span>Average Duration</span>
-                </div>
-                <div class="col">
-                    <i class="bi bi-ticket-perforated-fill"></i><br>
-                    <span>€38</span><br>
-                    <span>Cheapest Price</span>
-                </div>
-            </div>
-            <div class="row" style="justify-content: center;">
-                <a class="btn btn-warning" href="https://www.rome2rio.com/map/Greece/Crete-Greece?r2r_campaign=TQ_TP_Transport&source=adwords&gclid=CjwKCAjwseSoBhBXEiwA9iZtxrIrGvpKARAvyC6Pkxds-LXY1llp3WME2PqqaizDOMFe-XuYZs8-2BoCt8MQAvD_BwE" target="_blank">See schedules</a>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="parent-container" style="text-align: center;">
-    <i class="bi bi-tsunami" style="font-size:2.8rem"></i><br>
-    <h1 style="font-family: 'Raleway', sans-serif;">Piraeus to Crete ferrys</h1>
-    <div class="fade-in travel-container">
-        <div class="container" style="text-align: center;">
-            <div class="row" style="color:grey;font-family: 'Raleway', sans-serif;">
-                <div class="col">
-                    <i class="bi bi-calendar-day-fill"></i><br>
-                    <span>24</span><br>
-                    <span>Weekly Ferrys</span>
-                </div>
-                <div class="col">
-                    <i class="bi bi-stopwatch-fill"></i><br>
-                    <span>8hours</span><br>
-                    <span>Average Duration</span>
-                </div>
-                <div class="col">
-                    <i class="bi bi-ticket-perforated-fill"></i><br>
-                    <span>€40</span><br>
-                    <span>Cheapest Price</span>
-                </div>
-            </div>
-            <div class="row" style="justify-content: center;">
-                <a class="btn btn-warning" href="https://www.ferryhopper.com/el/" target="_blank">See schedules</a>
-            </div>
-        </div>
-    </div>
-</div>
+
 
 <div class="card-container">
     <div style="text-align: center;">
-        <i class="bi bi-shop"  style="font-size:2.8rem"></i><br>
+        <i class="bi bi-shop" style="font-size:2.8rem"></i><br>
         <h1>What to try</h1>
     </div>
     <div class="scroll-container">
         <div class="scroll-content">
-            <div class="fade-in scroll-content-header" style="background-image: url(../../assets/img/7-thalasses-seafood-restaurant.jpg);">
+            <div class="fade-in scroll-content-header"
+                style="background-image: url(../../assets/img/7-thalasses-seafood-restaurant.jpg);">
                 <div class="row">
                     <div class="col-sm-12 col-md-6" style="background-color: rgb(255, 255, 255,0.5);padding:10px">
                         <h1 style="color:black;">7 Thalasses <span
@@ -192,25 +243,31 @@
             </div>
         </div>
         <div class="scroll-content">
-            <div class="fade-in scroll-content-header" style="background-image: url(../../assets/img/nostos-restaurant.JPG);">
+            <div class="fade-in scroll-content-header"
+                style="background-image: url(../../assets/img/nostos-restaurant.JPG);">
                 <div class="row">
                     <div class="col-sm-12 col-md-6" style="background-color: rgb(255, 255, 255,0.5);padding:10px">
                         <h1 style="color:rgb(0, 0, 0);">Nostos <span
-                                style="color:rgb(92, 92, 92);font-family: 'Raleway', sans-serif;"> | in Rethymno</span></h1>
+                                style="color:rgb(92, 92, 92);font-family: 'Raleway', sans-serif;"> | in Rethymno</span>
+                        </h1>
                         <a class="btn btn-dark btn-lg" style="font-family: 'Raleway', sans-serif;"
-                            href="https://www.tripadvisor.com.gr/Restaurant_Review-g189421-d17474533-Reviews-Nostos-Rethymnon_Rethymnon_Prefecture_Crete.html" target="_blank">EXPLORE</a>
+                            href="https://www.tripadvisor.com.gr/Restaurant_Review-g189421-d17474533-Reviews-Nostos-Rethymnon_Rethymnon_Prefecture_Crete.html"
+                            target="_blank">EXPLORE</a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="scroll-content">
-            <div class="fade-in scroll-content-header" style="background-image: url(../../assets/img/avli-rethimno.JPG);">
+            <div class="fade-in scroll-content-header"
+                style="background-image: url(../../assets/img/avli-rethimno.JPG);">
                 <div class="row">
                     <div class="col-sm-12 col-md-6" style="background-color: rgb(255, 255, 255,0.5);padding:10px">
                         <h1 style="color:black;">Avli <span
-                                style="color:rgb(74, 74, 74);font-family: 'Raleway', sans-serif;"> | in Rethymno</span></h1>
+                                style="color:rgb(74, 74, 74);font-family: 'Raleway', sans-serif;"> | in Rethymno</span>
+                        </h1>
                         <a class="btn btn-dark btn-lg" style="font-family: 'Raleway', sans-serif;"
-                            href="https://www.tripadvisor.com/Restaurant_Review-g189421-d1102986-Reviews-Avli-Rethymnon_Rethymnon_Prefecture_Crete.html" target="_blank">EXPLORE</a>
+                            href="https://www.tripadvisor.com/Restaurant_Review-g189421-d1102986-Reviews-Avli-Rethymnon_Rethymnon_Prefecture_Crete.html"
+                            target="_blank">EXPLORE</a>
                     </div>
                 </div>
             </div>
