--- a/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/header/header.component.html
@@ -4,6 +4,7 @@
     <h1 style="color: #f5d15a;font-family: 'Raleway', sans-serif;"> Loading... </h1>
   </ngx-spinner>
 </div>
+
 <div class="d-flex">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
@@ -46,32 +47,30 @@
             <a class="nav-link" routerLink="/contact" data-bs-toggle="collapse"
               data-bs-target=".navbar-collapse.show">{{languageConfig.properties.get('header_contact')}}</a>
           </li>
-          <!-- <li style="color:white">
+          <li style="color:white">
             <div [hidden]="languageSelectedCode==='en'"><button class="btn" style="padding:0px"
                 (click)="changeLanguage('en')"><img src="../../assets/img/english-flag.png"
                   style="width:28px;height:28px;"></button></div>
             <div [hidden]="languageSelectedCode==='el'"><button class="btn" style="padding:0px"
                 (click)="changeLanguage('el')"><img src="../../assets/img/greek-icon.png"
                   style="width:28px;height:28px;"></button></div>
-          </li> -->
+          </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="languageContainer">
-    <div>
-      <div [hidden]="languageSelectedCode==='en'">
-        <button class="btn" (click)="changeLanguage('en')" style="color:White;text-decoration: underline;">
-          <!-- <img src="../../assets/img/english-flag.png"
-          style="width:32px;height:32px;"> -->
-          EN
-        </button></div>
-    <div [hidden]="languageSelectedCode==='el'">
-      <button class="btn" (click)="changeLanguage('el')"  style="color:White;text-decoration: underline;">
-        <!-- <img src="../../assets/img/greek-icon.png"
-          style="width:32px;height:32px;"> -->
-          EΛ
-        </button></div>
+  <!-- <div style="width:100%;text-align: right;">
+    <div class="languageContainer">
+      <div>
+        <div [hidden]="languageSelectedCode==='en'">
+          <button class="btn" (click)="changeLanguage('en')" style="color:White;text-decoration: underline;">
+            EN
+          </button></div>
+      <div [hidden]="languageSelectedCode==='el'">
+        <button class="btn" (click)="changeLanguage('el')"  style="color:White;text-decoration: underline;">
+            EΛ
+          </button></div>
+      </div>
     </div>
-  </div>
+  </div> -->
 </div>
