--- a/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.html
+++ b/TM.Wedding.UI/tm-wedding-ui/src/app/login/login.component.html
@@ -3,7 +3,56 @@
       <h1 style="color: #f5d15a;font-family: 'Raleway', sans-serif;"> Loading... </h1>
   </ngx-spinner>
 </div>
-<div class="bg" style="min-height:600px;text-align: center;" [hidden]="isLoading">
+
+<div class="carousel-container fade-in">
+  <div>
+      <div id="homeHeaderCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
+          <img src="../../assets/img/home.carousel.backround-vertical.6.png" class="d-block w-100" alt="...">
+      </div>
+  </div>
+  <div class="overlay-div">
+      <div class="overlay-div-container">
+          <div class="container">
+              <h1 class="overlay-div-header">We are getting Married</h1>
+          </div>
+          <div class="container" style="max-width:600px">
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" style="text-align:left">
+                <div [ngStyle]="{'opacity':isLoading ? '0.5' : '1' }">   
+                  <div>
+                    <mat-form-field style="width:100%;margin-top:2rem">
+                      <mat-label>Enter your password</mat-label>
+                      <input matInput type="password" formControlName="password">
+                    </mat-form-field>
+                  </div>
+                </div>
+        
+                <div class="form-inline" style="padding:0px;text-align: center;">
+                  <button class="btn btn-lg btn-warning" type="submit" style="margin-right:5px;width:100%;max-width:800;font-family: 'Raleway', sans-serif;" [disabled]="isLoading || !loginForm.valid">
+                    <i class="bi bi-door-open" style="padding-right:8px"></i>Login</button>
+                </div>
+        
+                <div class="form-inline" style="padding:40px 0px;" [hidden]="!isLoading">
+                  <div class="spinner-border text-primary" role="status">
+                  </div>
+                  <div>
+                    <h4 style="padding-left:20px;color:rgb(23, 23, 23)">Sign in...</h4>
+                  </div>
+                </div>
+        
+                <div class="form-inline errorMsg" [hidden]="errorMessage.length===0">
+                  <div class=error-container>
+                    <span style="padding-left:20px;color:rgb(224, 32, 32)"><i class="bi bi-emoji-frown" style="padding-right:4px"></i>{{errorMessage}}</span>
+                  </div>
+                </div>
+        
+              </form>
+        </div>
+      </div>
+  </div>
+</div>
+
+
+<!-- <div class="bg" style="min-height:600px;text-align: center;" [hidden]="isLoading">
     <div class="center-screen fade-in" style="padding-top:25%">
         <table style="width:100%">
             <tr>
@@ -19,11 +68,14 @@
                         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" style="text-align:left">
                             <div [ngStyle]="{'opacity':isLoading ? '0.5' : '1' }">   
                               <div>
-                                <input id="password" name="password" type="password" formControlName="password" placeholder="Enter your password" class="form-control">
+                                <mat-form-field style="width:100%;margin-top:2rem">
+                                  <mat-label>Enter your password</mat-label>
+                                  <input matInput type="password" formControlName="password">
+                                </mat-form-field>
                               </div>
                             </div>
                     
-                            <div class="form-inline" style="padding:20px 0px;text-align: center;">
+                            <div class="form-inline" style="padding:0px;text-align: center;">
                               <button class="btn btn-lg btn-warning" type="submit" style="margin-right:5px;width:100%;max-width:800" [disabled]="isLoading || !loginForm.valid">
                                 <i class="bi bi-door-open" style="padding-right:8px"></i>Login</button>
                             </div>
@@ -48,4 +100,4 @@
             </tr>
         </table>    
     </div>
-</div>
+</div> -->
